k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432  # Le port PostgreSQL
      targetPort: 5432
  clusterIP: None  # ClusterIP: None signifie un service sans IP stable (pour StatefulSet)
