k8s/django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: djangotest.com   # Domaine ou sous-domaine
    http:
      paths:
      - path: /          # Accéder à la racine
        pathType: Prefix
        backend:
          service:
            name: django-service   # Nom du service que vous exposez
            port:
              number: 80          # Port du service
